# nx-python-monorepo

./: .flake8  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
scripts/: create-lib.sh
